project/apps/network-policies/00-default-deny-argo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-default-deny
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
