project/apps/network-policies/01-allow-haproxy-to-longhorn-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-ui-allow-haproxy-ingress
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      app: longhorn-ui
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: haproxy-system
      ports:
        - protocol: TCP
          port: 8000
