project/apps/network-policies/argocd-ui-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-server-allow-ui-lab-access
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: haproxy-system
        - ipBlock:
            cidr: 192.168.56.0/24
      ports:
        - protocol: TCP
          port: 8080
